# STIS

./: .env  .gitignore  README.md
.github/workflows/: ci.yml
lr1/: report.md
lr1/domain/: description.md  er_diagram.drawio
lr1/go/: README.md  go.mod
lr1/go/cmd/poc/: main.go  queryCLI.go
lr1/go/ontology/: ontology.go  ontology_test.go
lr1/go/scenarios/: scenarios.go
lr2/: README.md  er_diagram.mmd  report.md
lr2/code/: Lab2API.java  sneps_logic.sneps  sneps_ready.sneps
lr2/domain/: description.md  er_diagram.drawio  model.md
lr2/pseudocode/: model.md
lr2/tests/: tests.sneps
lr3/: README.md  er_diagram.mmd  report.md
lr3/code/: Lab3API.java  sneps_logic.sneps  sneps_ready.sneps
lr3/domain/: description.md  model.md
lr3/go/: go.mod
lr3/go/cmd/poc/: input.go  main.go  queryCLI.go
lr3/go/ontology/: concept.go  kripke.go  ontology_test.go
lr3/go/scenarios/: scenarios.go
lr3/pseudocode/: model.md
lr3/snepsAPI/: Lab3API.java
lr3/tests/: tests.sneps
lr4/: CMakeLists.txt  Makefile  README.md  report.md
lr4/cpp/: CMakeLists.txt  README.md
lr4/cpp/include/: app.hpp  cli.hpp  demo_helpers.hpp  lazy.hpp  read_only_stream.hpp  sequence.hpp  stream.hpp  stress.hpp  sync.hpp  types.hpp  vector_sequence.hpp  write_only_stream.hpp
lr4/cpp/src/: CMakeLists.txt  app.cpp  cli.cpp  demo_helpers.cpp  embedded_tests.cpp  main.cpp  read_only_stream.cpp  stress_runner.cpp  test_stub.cpp  write_only_stream.cpp
lr4/cpp/tests/: test_lazy.cpp  test_streams.cpp  test_stress.cpp
lr4/scripts/: plot_results.py
